static/style.css
body       { padding-top:50px; }
.container {
	background-color: #f2f2f2;
	border: 1px solid #ccc;
	padding: 20px;
	top: 20px;
	-webkit-box-shadow: 0 2px 2px 1px rgba(0,0,0,0.2);
	box-shadow: 0 2px 2px 1px rgba(0,0,0,0.2);
}

.tabsdemoDynamicHeight md-content {
  background-color: transparent !important; }
  .tabsdemoDynamicHeight md-content md-tabs {
    background: #f6f6f6;
    border: 1px solid #e1e1e1; }
    .tabsdemoDynamicHeight md-content md-tabs md-tabs-wrapper {
      background: white; }
  .tabsdemoDynamicHeight md-content h1:first-child {
    margin-top: 0; 
}
.nav-tabs > li, .nav-pills > li {
    float:none;
    display:inline-block;
    *display:inline; /* ie7 fix */
     zoom:1; /* hasLayout ie7 trigger */
}

.nav-tabs, .nav-pills {
    text-align:center;
}

.thebest{
     position:absolute;
     bottom:0;
     right:0;
}

tab{
  font-size: 20;
}

tabset{
  font-size: 30;
  font-weight: 700;
}

